--- a/src/app/modules/guest/pages/speakers/speakers.page.html
+++ b/src/app/modules/guest/pages/speakers/speakers.page.html
@@ -1,3 +1,9 @@
+<div class="row col-md-12" style="margin-top: 20px;">
+    <div class="col-md-12" style="text-align: right;">
+        <button class="btn btn-primary" style="width: 164px; border-radius: 20px;" [routerLink]="['/home/speakerRegistration']">Be a Speaker</button>
+    </div>
+   
+</div>
 <div>
     <pt-recent-speakers></pt-recent-speakers>
 </div>
