--- a/src/app/modules/guest/components/upcoming-events/upcoming-events.component.html
+++ b/src/app/modules/guest/components/upcoming-events/upcoming-events.component.html
@@ -55,7 +55,7 @@
                           <p> {{event.eventTime | date:'medium'}}</p>
                         </td>
                         <td class="col-md-6">
-                            <button class="btn btn-primary" style="border-radius: 20px;"> Know more...</button>  
+                            <button class="btn btn-primary" style="border-radius: 20px;" [routerLink]="['/home/eventDetails', event.speakerId, event.id]"> Know more...</button>  
                           </td>
                         </tr>
                              </table>
